# talk_meetingembedded2018_code

./: .gitignore  2018.h  CMakeLists.txt  README.md  console_ledpanel.cpp  openocd_onboarddebugger.sh  unicorn.h
arm/: CMakeLists.txt  MK64FN1M0xxx12_flash.ld  arm_toolchain.cmake  main.cpp  pin_toggle_kvasir.cpp  pin_toggle_vendor.cpp
x86/: CMakeLists.txt  SFR_wrapper.hpp  SFR_wrapper_proof.cpp  SFR_wrapper_proof.hpp  console_ledpanel.cpp  meetingembedded_graphic.h  pin_toggle_local_kvasir.cpp  real_ledpanel.cpp  unicorn_graphic.h
